--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/pharmacy
+spring.datasource.url=jdbc:postgresql://localhost:5432/isa
 spring.datasource.username=postgres
 spring.datasource.password=root
-server.port=8081
+#server.port=8081
 
 #kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
 spring.jpa.hibernate.ddl-auto = create-drop
@@ -18,11 +18,17 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #optimizacija za postgres upite
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
-isa.mainAdminAddress = "placeholder"
-spring.mail.host=smtp.gmail.com
+#isa.mainAdminAddress = "placeholder"
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=?????@gmail.com
+#spring.mail.password=????
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username = isa59202021@gmail.com
+spring.mail.password = isAstrong59
 spring.mail.port=587
-spring.mail.username=?????@gmail.com
-spring.mail.password=????
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.starttls.enable = true
