--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -18,17 +18,11 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #optimizacija za postgres upite
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
-#isa.mainAdminAddress = "placeholder"
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=?????@gmail.com
-#spring.mail.password=????
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.starttls.required=true
-
-spring.mail.host = smtp.gmail.com
-spring.mail.username = isa59202021@gmail.com
+#spring.mail.username = isa59202021@gmail.com
+spring.mail.username = isatest52@gmail.com
 spring.mail.password = isAstrong59
-spring.mail.port=587
-spring.mail.properties.mail.smtp.starttls.enable = true
+
+spring.mail.properties.mail.smtp.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.from.email=isa59202021@gmail.com
