--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/isa
 spring.datasource.username=postgres
 spring.datasource.password=root
-#server.port=8081
+server.port=8081
 
 #kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
 spring.jpa.hibernate.ddl-auto = create-drop
@@ -18,6 +18,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #optimizacija za postgres upite
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
+spring.mail.host = smtp.gmail.com
+spring.mail.port=587
 #spring.mail.username = isa59202021@gmail.com
 spring.mail.username = isatest52@gmail.com
 spring.mail.password = isAstrong59
@@ -26,3 +28,7 @@ spring.mail.properties.mail.smtp.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.from.email=isa59202021@gmail.com
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.swagger-ui.disable-swagger-default-url=true
